Cleanup and set alpha for root children

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -14,7 +14,7 @@ $link: CadetBlue;
     }
 
     text {
-      font: .75em sans-serif;
+      font:    .75rem sans-serif;
       opacity: .6;
     }
   }
