Add import controls

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -34,3 +34,12 @@ $opacity: .75;
     stroke-width:   .125rem;
   }
 }
+
+.import-controls {
+  position:   absolute;
+  background: none;
+
+  &.dragover {
+    background: rgba(0, 0, 0, .6);
+  }
+}
