--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -1,3 +1,8 @@
+body {
+  background: none; }
+  body.dragover {
+    background: rgba(0, 0, 0, 0.25); }
+
 .radial-tree-browser .node {
   cursor: pointer;
   user-select: none; }
@@ -19,5 +24,3 @@
 .import-controls {
   position: absolute;
   background: none; }
-  .import-controls.dragover {
-    background: rgba(0, 0, 0, 0.6); }
