--- a/public/assets/styles.scss
+++ b/public/assets/styles.scss
@@ -5,6 +5,14 @@ $link: CadetBlue;
 
 $opacity: .75;
 
+body {
+  background: none;
+
+ &.dragover {
+    background: rgba(0, 0, 0, .25);
+  }
+}
+
 .radial-tree-browser {
   .node {
     cursor: pointer;
@@ -38,8 +46,4 @@ $opacity: .75;
 .import-controls {
   position:   absolute;
   background: none;
-
-  &.dragover {
-    background: rgba(0, 0, 0, .6);
-  }
 }
